...
            "state" : "translated",
            "value" : "Adicionar subtarefa"
          }
        }
      }
    },
    "Add task" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add task"
          }
...
            "state" : "translated",
            "value" : "O nome do projeto não pode estar vazio."
          }
        }
      }
    },
    "Projects" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Projects"
          }
...
            "state" : "translated",
            "value" : "Ajustes"
          }
        }
      }
    },
    "Stats" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stats"
          }
...
            "state" : "translated",
            "value" : "Tarefa"
          }
        }
      }
    },
    "Tasks" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tasks"
          }
...
